// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hero /> rendering behavior should render the Hero component with default props 1`] = `
<styled.div
  backgroundColor="#2d2d2d"
>
  Some content
</styled.div>
`;

exports[`<Hero /> rendering behavior should render with other props 1`] = `
<styled.div
  backgroundColor="ff6600"
>
  Some content
</styled.div>
`;
